# TeamConference

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  compile.bat  compile.sh  docker-compose.yml  start.bat  start.sh
.github/workflows/: release.yml
client/: Cargo.toml  README.md  build.rs
client/.cargo/: config.toml
client/src/: actions.rs  app.rs  config.rs  events.rs  handlers.rs  hub.rs  main.rs  protocol.rs  roomtree.rs  state.rs  ui.rs  update.rs
client/src/audio/: capture.rs  device.rs  file_stream.rs  mod.rs  playback.rs
client/src/net/: mod.rs  udp_client.rs  ws_client.rs
client/ui/: main.slint
docker/: Dockerfile  config.toml
docs/: protocol.md
lib/: Cargo.toml
lib/.cargo/: config.toml
lib/src/: lib.rs
packaging/arch/: PKGBUILD
packaging/linux/: build-deb.sh  teamconference.desktop
packaging/macos/: entitlements.plist
server/: Cargo.toml  config.default.toml
server/migrations/: 001_initial.sql
server/src/: config.rs  main.rs  server.rs  tls.rs
server/src/admin/: handler.rs
server/src/audio/: file_stream.rs  mixer.rs  mod.rs  udp_server.rs
server/src/chat/: handler.rs
server/src/control/: auth.rs  central.rs  handler.rs  hubdir.rs  mod.rs  protocol.rs
server/src/db/: queries.rs  schema.rs
server/src/files/: handler.rs
server/src/room/: manager.rs
server/src/user/: manager.rs
