[package]
name = "teamconference-client"
version = "0.3.1"
edition = "2021"
description = "TeamConference-Client (wxWidgets/wxDragon) mit Barrierefreiheits-Fokus"

[dependencies]
wxdragon = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
futures-util = "0.3"
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
opus = "0.3"
crossbeam-channel = "0.5"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
parking_lot = "0.12"
chrono = "0.4"
# Auto-Updater: HTTPS-Abruf der GitHub-Releases (rustls/ring, keine OpenSSL-/C-Abhängigkeit)
ureq = "2"
# Sprachausgabe für Barrierefreiheit: routet über den Screenreader, wo möglich
# (Windows via Tolk → NVDA/JAWS, sonst SAPI; macOS AVFoundation; Linux Speech
# Dispatcher). Läuft nur auf dem UI-Thread (Instanz ist nicht Send auf macOS).
tts = "0.26"

# Auf Windows zusätzlich das Tolk-Backend aktivieren, damit Ansagen über den
# aktiven Screenreader (NVDA/JAWS) laufen statt nur über SAPI.
[target.'cfg(windows)'.dependencies]
tts = { version = "0.26", features = ["tolk"] }

[build-dependencies]
# Bettet unter Windows das Anwendungs-Manifest ein (Common Controls v6, DPI).
embed-manifest = "1.4"

[profile.dev]
opt-level = 2
