[package]
name = "teamconference-core"
version = "0.1.0"
edition = "2021"
description = "UI-agnostischer Kern (Protokoll, Netzwerk, Audio) von TeamConference — wiederverwendbar für mobile Clients (iOS/Android) per FFI"

[lib]
# staticlib → für iOS-Anbindung (libteamconference_core.a)
# cdylib    → für Android (.so) bzw. allgemeine FFI
# lib (rlib)→ damit der Desktop-Client das Crate künftig als Abhängigkeit nutzen kann
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
# Bewusst OHNE wxdragon / ureq / dirs / tracing-subscriber / embed-manifest —
# das sind UI-/Desktop-Belange, nicht Teil des Cores.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
futures-util = "0.3"
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
opus = "0.3"
crossbeam-channel = "0.5"
base64 = "0.22"
tracing = "0.1"
parking_lot = "0.12"
chrono = "0.4"
